[gd_scene load_steps=25 format=3 uid="uid://cfgka3j007de2"]

[ext_resource type="Script" path="res://scenes/UI/interact_menu.gd" id="1_uj28t"]
[ext_resource type="Script" path="res://scenes/UI/info_panel.gd" id="2_ojhxl"]
[ext_resource type="Script" path="res://scripts/UI/main_buttons.gd" id="3_e6t6e"]
[ext_resource type="ButtonGroup" uid="uid://bk4fglxgy6wm3" path="res://resources/UI/main_button_group.tres" id="4_8dhx7"]
[ext_resource type="Script" path="res://scenes/UI/schedule_ui.gd" id="4_gaqtc"]
[ext_resource type="Resource" uid="uid://bed7p3m8hf1sq" path="res://resources/activities/race.tres" id="5_1esoo"]
[ext_resource type="Resource" uid="uid://cassvg30j87ml" path="res://resources/activities/rest.tres" id="5_065qo"]
[ext_resource type="Script" path="res://scripts/UI/schedule_slot.gd" id="6_gon7h"]
[ext_resource type="Script" path="res://scenes/UI/sub_menu.gd" id="8_g2pvc"]
[ext_resource type="PackedScene" uid="uid://cipgok3b55loo" path="res://scenes/UI/training_menu.tscn" id="8_q3ojo"]
[ext_resource type="Script" path="res://scripts/UI/tweak.gd" id="10_hsmpm"]
[ext_resource type="Shader" path="res://scripts/shaders/float.gdshader" id="12_ajibj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xn0q5"]
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 15.0
shader_parameter/max_distance = Vector2(16, 16)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 0.0
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4c6c8"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(8, 8)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 4.06474
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yacoe"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(8, 8)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 0.373001
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dw2jb"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(8, 8)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 5.12689
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qndnn"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(8, 8)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 1.80937
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtf7v"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(8, 8)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 1.13918
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o7k7w"]
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 10.0
shader_parameter/max_distance = Vector2(8, 6)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 4.94821
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cuvww"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(4, 4)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 4.41368
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pcigv"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(4, 4)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 0.230184
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ku08w"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(4, 4)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 2.59919
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pf70l"]
resource_local_to_scene = true
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 7.0
shader_parameter/max_distance = Vector2(4, 4)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 5.1935
shader_parameter/disabled = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ykhxp"]
shader = ExtResource("12_ajibj")
shader_parameter/cycle_time_sec = 15.0
shader_parameter/max_distance = Vector2(4, 4)
shader_parameter/volatility = 1.3
shader_parameter/time_offset = 0.0
shader_parameter/disabled = false

[node name="InteractMenu" type="Control" node_paths=PackedStringArray("name_label_container", "main_buttons", "info_panel_container", "stat_panel", "schedule_ui", "submenu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_uj28t")
name_label_container = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/NameTweenContainer")
main_buttons = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons")
info_panel_container = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/InfoPanelTweenCon")
stat_panel = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/InfoPanelTweenCon/InfoPanel")
schedule_ui = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI")
submenu = NodePath("MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/SubMenu")
metadata/_edit_lock_ = true

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="MainMenuMargin" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32
metadata/_edit_lock_ = true

[node name="MainMenuVBox" type="VBoxContainer" parent="MainMenu/MainMenuMargin"]
layout_mode = 2
theme_override_constants/separation = 0
metadata/_edit_lock_ = true

[node name="NameTweenContainer" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox"]
layout_mode = 2
script = ExtResource("10_hsmpm")
active = false
side = 1

[node name="Name" type="Label" parent="MainMenu/MainMenuMargin/MainMenuVBox/NameTweenContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xn0q5")
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 48
text = "Pet Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainHBox" type="HBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox" node_paths=PackedStringArray("schedule_ui")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 64
script = ExtResource("3_e6t6e")
schedule_ui = NodePath("../../ScheduleUI")
compete_activity = ExtResource("5_1esoo")
rest_activity = ExtResource("5_065qo")

[node name="TrainCon" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("10_hsmpm")
active = false
target_scale = Vector2(0.3, 1)

[node name="Train" type="Button" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons/TrainCon"]
material = SubResource("ShaderMaterial_4c6c8")
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../Praise/Praise")
focus_neighbor_bottom = NodePath("../../FeedCon/Feed")
focus_next = NodePath("../../FeedCon/Feed")
focus_previous = NodePath("../../Praise/Praise")
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_8dhx7")
text = "Train
"
metadata/_edit_use_anchors_ = true

[node name="FeedCon" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("10_hsmpm")
active = false
target_scale = Vector2(0.3, 1)

[node name="Feed" type="Button" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons/FeedCon"]
material = SubResource("ShaderMaterial_yacoe")
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../TrainCon/Train")
focus_neighbor_bottom = NodePath("../../Rest/Rest")
focus_next = NodePath("../../Rest/Rest")
focus_previous = NodePath("../../TrainCon/Train")
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_8dhx7")
text = "Feed"
metadata/_edit_use_anchors_ = true

[node name="Rest" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("10_hsmpm")
active = false
target_scale = Vector2(0.3, 1)

[node name="Rest" type="Button" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons/Rest"]
material = SubResource("ShaderMaterial_dw2jb")
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../FeedCon/Feed")
focus_neighbor_bottom = NodePath("../../Compete/Compete")
focus_next = NodePath("../../Compete/Compete")
focus_previous = NodePath("../../FeedCon/Feed")
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_8dhx7")
text = "Rest"
metadata/_edit_use_anchors_ = true

[node name="Compete" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("10_hsmpm")
active = false
target_scale = Vector2(0.3, 1)

[node name="Compete" type="Button" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons/Compete"]
material = SubResource("ShaderMaterial_qndnn")
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../Rest/Rest")
focus_neighbor_bottom = NodePath("../../Praise/Praise")
focus_next = NodePath("../../Praise/Praise")
focus_previous = NodePath("../../Rest/Rest")
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_8dhx7")
text = "Compete"
metadata/_edit_use_anchors_ = true

[node name="Praise" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons"]
layout_mode = 2
size_flags_vertical = 6
script = ExtResource("10_hsmpm")
active = false
target_scale = Vector2(0.3, 1)

[node name="Praise" type="Button" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/MainButtons/Praise"]
material = SubResource("ShaderMaterial_rtf7v")
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../Compete/Compete")
focus_neighbor_bottom = NodePath("../../TrainCon/Train")
focus_next = NodePath("../../TrainCon/Train")
focus_previous = NodePath("../../Compete/Compete")
focus_mode = 0
toggle_mode = true
button_group = ExtResource("4_8dhx7")
text = "Praise
"
metadata/_edit_use_anchors_ = true

[node name="SubMenu" type="Control" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox" node_paths=PackedStringArray("tweaks", "menus")]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
mouse_filter = 1
script = ExtResource("8_g2pvc")
enter_side = 1
exit_side = 3
tweaks = [NodePath("SubmenuCon")]
menus = [NodePath("SubmenuCon/TrainingMenu")]
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="SubmenuCon" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/SubMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -178.5
offset_right = 500.0
offset_bottom = 178.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_hsmpm")
active = false
side = 3
hide_mode = 2

[node name="TrainingMenu" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/SubMenu/SubmenuCon" instance=ExtResource("8_q3ojo")]
layout_mode = 2
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="InfoPanelTweenCon" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("10_hsmpm")
active = false
side = 2
target_scale = Vector2(0.3, 0.3)

[node name="InfoPanel" type="PanelContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/InfoPanelTweenCon"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_o7k7w")
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("2_ojhxl")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/InfoPanelTweenCon/InfoPanel"]
use_parent_material = true
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 24

[node name="StatDisplay" type="VBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/MainHBox/InfoPanelTweenCon/InfoPanel/MarginContainer"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 30

[node name="ScheduleUI" type="VBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox" node_paths=PackedStringArray("start_week_tweak")]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 64
script = ExtResource("4_gaqtc")
start_week_tweak = NodePath("../../../StartWeekTweak")

[node name="SlotsTweak" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("10_hsmpm")
active = false
target = NodePath("../TargetsContainer/HBoxTargets")

[node name="Slots" type="HBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/SlotsTweak"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 64
alignment = 1

[node name="Slot1" type="Panel" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/SlotsTweak/Slots"]
material = SubResource("ShaderMaterial_cuvww")
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_type_variation = &"SchedulePanel"
script = ExtResource("6_gon7h")

[node name="Slot2" type="Panel" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/SlotsTweak/Slots"]
material = SubResource("ShaderMaterial_pcigv")
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_type_variation = &"SchedulePanel"
script = ExtResource("6_gon7h")

[node name="Slot3" type="Panel" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/SlotsTweak/Slots"]
material = SubResource("ShaderMaterial_ku08w")
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_type_variation = &"SchedulePanel"
script = ExtResource("6_gon7h")

[node name="Slot4" type="Panel" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/SlotsTweak/Slots"]
material = SubResource("ShaderMaterial_pf70l")
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_type_variation = &"SchedulePanel"
script = ExtResource("6_gon7h")

[node name="TargetsContainer" type="Container" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI"]
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("10_hsmpm")
active = false
side = 3

[node name="HBoxTargets" type="HBoxContainer" parent="MainMenu/MainMenuMargin/MainMenuVBox/ScheduleUI/TargetsContainer"]
z_index = -1
custom_minimum_size = Vector2(352, 32)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32
alignment = 1

[node name="StartWeekTweak" type="Container" parent="MainMenu"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -376.0
offset_top = -230.0
offset_right = -99.0
offset_bottom = -106.0
size_flags_horizontal = 8
size_flags_vertical = 4
script = ExtResource("10_hsmpm")
active = false
side = 2
hide_mode = 2
target_scale = Vector2(0.3, 1)
metadata/_edit_lock_ = true

[node name="StartWeek" type="Button" parent="MainMenu/StartWeekTweak"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_ykhxp")
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_type_variation = &"ButtonLeft"
theme_override_font_sizes/font_size = 48
text = "Start"
metadata/_edit_lock_ = true
